# qbt-flow-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: develop.yml  main.yml  on-release-main.yml
config/: path_config.yml  scoring_config.yml  tags_config.yml
config/clients_config/: local_client_config.yml  remote_client_config.yml
config/rclone_config/: rclone.conf  rclone_config.yml
config/trackers_config/: sample_tracker_conf.yml  tracker_sample_config.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: index.md  modules.md
docs/config/: trackers.md
qbt_flow_utils/: __init__.py  __main__.py  logging.py  settings.py
qbt_flow_utils/checkers/: __init__.py  cross_seed_check.py  disk_check.py  hard_links_check.py  hit_and_run_check.py  limits_check.py  tracker_check.py
qbt_flow_utils/config/: __init__.py  config.py  settings.py  validate_config.py
qbt_flow_utils/config/schemas/: __init__.py  clients.py  scoring.py  tags.py  trackers.py
qbt_flow_utils/flow_utils/: __init__.py
qbt_flow_utils/flow_utils/checkers/: __init__.py  cross_seed_check.py  hard_links_check.py  hit_and_run_check.py  hit_and_run_ckeck.py  public_tracker_check.py  tracker_check.py
qbt_flow_utils/flow_utils/scoring/: __init__.py  scoring.py
qbt_flow_utils/listerr/: __init__.py  base_torrents_list.py  torrents_infos_list.py
qbt_flow_utils/listers/: torrents_lists.py
qbt_flow_utils/listers/checkers/: hardlink.py  hit_and_run.py  scoring.py
qbt_flow_utils/qbittorrent/: __init__.py  connect.py  qbt_session.py  qbt_settings.py
qbt_flow_utils/schemas/: __init__.py  clients.py  scoring.py  tags.py  torrent.py  torrents.py  trackers.py
qbt_flow_utils/schemas/utils/: __init__.py  validator_utils.py
qbt_flow_utils/scoring/: scoring.py
qbt_flow_utils/tagerr/: __init__.py  torrent_tag.py  torrents_tagerr.py
qbt_flow_utils/torrents/: scoring.py
qbt_flow_utils/utils/: __init__.py
qbt_flow_utils/utils/checkers/: __init__.py  cross_seed.py  hard_links.py  hardlink.py  hit_and_run.py  removal.py  scoring.py  tracker_check.py
tests/: test_client_config.py  test_foo.py  test_tags_schema.py  test_tracker_config.py  tracker_config_test.py
